# Mira

./: .gitignore  CMakeLists.txt  mira_config.ini  mock_server.py  run_mira.sh
src/: main.cpp
src/config/: ConfigManager.cpp  ConfigManager.h
src/core/: MiraController.cpp  MiraController.h
src/network/: TelemetryClient.cpp  TelemetryClient.h  TelemetryServer.cpp  TelemetryServer.h
ui/: main.qml
